--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ly-tabbar",
-  "version": "1.0.0",
+  "name": "ly-tab",
+  "version": "1.0.3",
   "description": "A better mobile touch-swappable reusable component for vue2.*",
   "author": "ScoutYin <yinbin_web@163.com>",
   "contributors": [
@@ -13,9 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "ly-tab": "^1.0.2",
-    "mint-ui": "^2.2.13",
-    "style-loader": "^0.20.2",
+    "ly-tab": "^1.0.3",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -46,12 +44,10 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
