--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-.DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/unit/coverage/
+node_modules
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
+# lock file
 yarn.lock
