--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.6.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "vue": "^2.6.14",
